2011-04-20  Rohan Kangralkar <rkangral@ece.neu.edu>

	PR 1781/bsps
	* bf52x/include: Added additional MMR. 
	* bf52x/interrupt: The BF52X processors have a different
	System interrupt controller than present in the 53X range of
	processors. The 52X have 8 interrupt assignment registers. The
	implementation uses tables to increase predictability.
	* serial/uart.?: Added DMA based and interrupt based transfer
	support. The uart code used a single ISR for TX and RX and tried
	to identify and multiplex inside the ISR. In the new code the
	type of interrupt is identified by the central ISR dispatcher
	bf52x/interrupt or interrupt/.	This simplifies the UART ISR.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-01-11	Allan Hessenflow <allanh@kallisti.com>

	* serial/spi.c, serial/spi.h:
	Fill in skeleton with functional SPI master code.
	* include/spiRegs.h:
	Correct spi shadow register declaration.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* serial/uart.c:
	Reflect changes to rtems_termios_callbacks->write.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/rtc.c: Add initializer (Silence warning).

2009-05-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* clock/rtc.c, clock/tod.h: Update for new RTC driver interface.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	* mmu/mmu.c: enable mmu after initializing it.
	* mmu/mmu.h: add missing mmu flags entries.
	* include/mmuRegs.h: correct a couple field name typos.

2008-09-25	Allan Hessenflow <allanh@kallisti.com>

	* clock/clock.c, include/bf533.h, include/bf537.h, include/sicRegs.h:

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* interrupt/interrupt.h, serial/spi.h, serial/twi.h, serial/uart.h:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>
